--- a/Server/package.json
+++ b/Server/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0",
-    "nodemon": "^2.0.21"
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^4.12.1",
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7"
   }
 }
