--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.12.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7"
   }
