--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^4.12.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.6.1"
   }
 }
